# serializer version: 1
# name: test_all_entities[switch.nursery_yoto_bluetooth-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.nursery_yoto_bluetooth',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Bluetooth',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bluetooth',
    'platform': 'yoto',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bluetooth',
    'unique_id': 'player-test_bluetooth',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.nursery_yoto_bluetooth-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Nursery Yoto Bluetooth',
    }),
    'context': <ANY>,
    'entity_id': 'switch.nursery_yoto_bluetooth',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.nursery_yoto_bluetooth_headphones-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.nursery_yoto_bluetooth_headphones',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Bluetooth headphones',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bluetooth headphones',
    'platform': 'yoto',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bluetooth_headphones',
    'unique_id': 'player-test_bluetooth_headphones',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.nursery_yoto_bluetooth_headphones-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Nursery Yoto Bluetooth headphones',
    }),
    'context': <ANY>,
    'entity_id': 'switch.nursery_yoto_bluetooth_headphones',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.nursery_yoto_day_automatic_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.nursery_yoto_day_automatic_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Day automatic brightness',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Day automatic brightness',
    'platform': 'yoto',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'day_auto_brightness',
    'unique_id': 'player-test_day_auto_brightness',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.nursery_yoto_day_automatic_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Nursery Yoto Day automatic brightness',
    }),
    'context': <ANY>,
    'entity_id': 'switch.nursery_yoto_day_automatic_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.nursery_yoto_day_system_sounds-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.nursery_yoto_day_system_sounds',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Day system sounds',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Day system sounds',
    'platform': 'yoto',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'day_sounds',
    'unique_id': 'player-test_day_sounds',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.nursery_yoto_day_system_sounds-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Nursery Yoto Day system sounds',
    }),
    'context': <ANY>,
    'entity_id': 'switch.nursery_yoto_day_system_sounds',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.nursery_yoto_limit_headphone_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.nursery_yoto_limit_headphone_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Limit headphone volume',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Limit headphone volume',
    'platform': 'yoto',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'headphones_volume_limit',
    'unique_id': 'player-test_headphones_volume_limit',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.nursery_yoto_limit_headphone_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Nursery Yoto Limit headphone volume',
    }),
    'context': <ANY>,
    'entity_id': 'switch.nursery_yoto_limit_headphone_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.nursery_yoto_night_automatic_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.nursery_yoto_night_automatic_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Night automatic brightness',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Night automatic brightness',
    'platform': 'yoto',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'night_auto_brightness',
    'unique_id': 'player-test_night_auto_brightness',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.nursery_yoto_night_automatic_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Nursery Yoto Night automatic brightness',
    }),
    'context': <ANY>,
    'entity_id': 'switch.nursery_yoto_night_automatic_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.nursery_yoto_night_system_sounds-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.nursery_yoto_night_system_sounds',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Night system sounds',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Night system sounds',
    'platform': 'yoto',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'night_sounds',
    'unique_id': 'player-test_night_sounds',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.nursery_yoto_night_system_sounds-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Nursery Yoto Night system sounds',
    }),
    'context': <ANY>,
    'entity_id': 'switch.nursery_yoto_night_system_sounds',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.nursery_yoto_pause_with_power_button-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.nursery_yoto_pause_with_power_button',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pause with power button',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pause with power button',
    'platform': 'yoto',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pause_power_button',
    'unique_id': 'player-test_pause_power_button',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.nursery_yoto_pause_with_power_button-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Nursery Yoto Pause with power button',
    }),
    'context': <ANY>,
    'entity_id': 'switch.nursery_yoto_pause_with_power_button',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.nursery_yoto_pause_with_volume_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.nursery_yoto_pause_with_volume_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pause with volume down',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pause with volume down',
    'platform': 'yoto',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pause_volume_down',
    'unique_id': 'player-test_pause_volume_down',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.nursery_yoto_pause_with_volume_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Nursery Yoto Pause with volume down',
    }),
    'context': <ANY>,
    'entity_id': 'switch.nursery_yoto_pause_with_volume_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[switch.nursery_yoto_repeat_all-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.nursery_yoto_repeat_all',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Repeat all',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Repeat all',
    'platform': 'yoto',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'repeat_all',
    'unique_id': 'player-test_repeat_all',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.nursery_yoto_repeat_all-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Nursery Yoto Repeat all',
    }),
    'context': <ANY>,
    'entity_id': 'switch.nursery_yoto_repeat_all',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
